tests/snapshots/trace_cli@17993944322307758114.snap
---
source: tests/trace_cli.rs
info: "set rfc3627\nset predicate_style SequentInMemory\nrules"
---
The two rulesets are described by the following sets of rules, with differences highlighted.
The old ruleset is on the left, and the new one on the right.

 inh, ro ⊢ p0: &mut T0,  inh, ro ⊢ p1: &mut T1                                    | inh, ro ⊢ p0: &T0,  inh, ro ⊢ p1: &T1
 --------------------------------------------- "ConstructorRef"                   | ------------------------------------- "ConstructorRef(ForceReadOnly)"
 r, ro ⊢ [p0, p1]: &mut [T0, T1]                                                  | r, ro ⊢ [p0, p1]: &mut [T0, T1]

 inh, ro ⊢ [p0, p1]: &mut T                                                       | inh, ro ⊢ [p0, p1]: &T
 ----------------------------- "ConstructorMultiRef"                              | ----------------------------- "ConstructorMultiRef(ForceReadOnly)"
 r, ro ⊢ [p0, p1]: &mut &mut T                                                    | r, ro ⊢ [p0, p1]: &mut &mut T

 real, ro ⊢ p: &T                                                                 | inh, ro ⊢ p: &T
 ---------------- "Deref"                                                         | ---------------- "Deref(EatInner)"
 inh, m ⊢ &p: &&T                                                                 | inh, m ⊢ &p: &&T

 real, ro ⊢ p: &mut T                                                             | inh, ro ⊢ p: &T
 -------------------- "Deref"                                                     | -------------------- "DerefMutWithShared(EatInner)"
 inh, m ⊢ &p: &&mut T                                                             | inh, m ⊢ &p: &&mut T

 real, ro ⊢ p: &mut T                                                             | inh, ro ⊢ p: &T
 ----------------------------- "Deref"                                            | ----------------------------- "Deref(EatInner, ForceReadOnly)"
 inh, ro ⊢ &mut p: &mut &mut T                                                    | inh, ro ⊢ &mut p: &mut &mut T

 real, rw ⊢ p: &mut T                                                             | inh, rw ⊢ p: &mut T
 ----------------------------- "Deref"                                            | ----------------------------- "Deref(EatInner)"
 inh, rw ⊢ &mut p: &mut &mut T                                                    | inh, rw ⊢ &mut p: &mut &mut T

                                                                                  | inh, m ⊢ p: &T
                                                                                  | ------------------------ "Deref(EatInner)"
                                                                                  | inh, m ⊢ &mut p: &&mut T

 real, ro ⊢ p: &T                                                                 | inh, ro ⊢ p: &T
 -------------------- "DerefMutWithShared"                                        | -------------------- "Deref(EatInner, ForceReadOnly)"
 inh, m ⊢ &p: &mut &T                                                             | inh, m ⊢ &p: &mut &T

 real, ro ⊢ p: &mut T                                                             | inh, ro ⊢ p: &T
 ------------------------ "DerefMutWithShared"                                    | ------------------------ "DerefMutWithShared(EatInner)"
 inh, m ⊢ &p: &mut &mut T                                                         | inh, m ⊢ &p: &mut &mut T

                                                                                  | r, m ⊢ ref x: T
                                                                                  | ------------------ "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref x: &T

                                                                                  | r, m ⊢ ref x: T
                                                                                  | ---------------------- "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref x: &mut T

                                                                                  | r, m ⊢ ref mut x: T
                                                                                  | ---------------------- "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref mut x: &T

                                                                                  | r, m ⊢ ref mut x: T
                                                                                  | -------------------------- "RefBindingResetBindingMode"
                                                                                  | inh, m ⊢ ref mut x: &mut T

                                                                                  |
 ------------------ "Binding"                                                     |
 inh, m ⊢ mut x: &T                                                               |

                                                                                  |
 ---------------------- "Binding"                                                 |
 inh, m ⊢ mut x: &mut T                                                           |


allow_ref_pat_on_ref_mut: true
downgrade_mut_inside_shared: false -> true
eat_inherited_ref_alone: true
eat_mut_inside_shared: true
fallback_to_outer: "No" -> "EatOuter"
inherited_ref_on_ref: "EatOuter" -> "EatInner"
match_constructor_through_ref: true
mut_binding_on_inherited: "Keep" -> "Error"
ref_binding_on_inherited: "Error" -> "ResetBindingMode"
simplify_deref_mut: true
The current options can be fully described as the following set of rules.
The typing predicate looks like `bm, m ⊢ p: T`, where
- `bm` is `move`, `ref` or `ref mut` and indicates the binding mode;
- `m` is `rw` or `ro` and indicates whether we have mutable or read-only access to the original scrutinee;
- `p` is a pattern;
- `T` is a type.

move, m ⊢ p0: T0,  move, m ⊢ p1: T1
----------------------------------- "Constructor"
move, m ⊢ [p0, p1]: [T0, T1]

ref, ro ⊢ p0: T0,  ref, ro ⊢ p1: T1
----------------------------------- "ConstructorRef"
move, m ⊢ [p0, p1]: &[T0, T1]

ref, ro ⊢ p0: T0,  ref, ro ⊢ p1: T1
----------------------------------- "ConstructorRef"
ref, m ⊢ [p0, p1]: [T0, T1]

ref mut, rw ⊢ p0: T0,  ref mut, rw ⊢ p1: T1
------------------------------------------- "ConstructorRef"
move, rw ⊢ [p0, p1]: &mut [T0, T1]

ref mut, rw ⊢ p0: T0,  ref mut, rw ⊢ p1: T1
------------------------------------------- "ConstructorRef"
ref mut, rw ⊢ [p0, p1]: [T0, T1]

ref, ro ⊢ p0: T0,  ref, ro ⊢ p1: T1
----------------------------------- "ConstructorRef(ForceReadOnly)"
move, ro ⊢ [p0, p1]: &mut [T0, T1]

ref, ro ⊢ p0: T0,  ref, ro ⊢ p1: T1
----------------------------------- "ConstructorRef(ForceReadOnly)"
ref mut, ro ⊢ [p0, p1]: [T0, T1]

ref, ro ⊢ [p0, p1]: T
----------------------- "ConstructorMultiRef"
move, m ⊢ [p0, p1]: &&T

ref, ro ⊢ [p0, p1]: T
--------------------------- "ConstructorMultiRef"
move, m ⊢ [p0, p1]: &&mut T

ref, ro ⊢ [p0, p1]: T
--------------------- "ConstructorMultiRef"
ref, m ⊢ [p0, p1]: &T

ref, ro ⊢ [p0, p1]: T
------------------------- "ConstructorMultiRef"
ref, m ⊢ [p0, p1]: &mut T

ref, ro ⊢ [p0, p1]: T
--------------------------- "ConstructorMultiRef"
move, m ⊢ [p0, p1]: &mut &T

ref mut, rw ⊢ [p0, p1]: T
-------------------------------- "ConstructorMultiRef"
move, rw ⊢ [p0, p1]: &mut &mut T

ref, ro ⊢ [p0, p1]: T
------------------------- "ConstructorMultiRef"
ref mut, m ⊢ [p0, p1]: &T

ref mut, rw ⊢ [p0, p1]: T
------------------------------ "ConstructorMultiRef"
ref mut, rw ⊢ [p0, p1]: &mut T

ref, ro ⊢ [p0, p1]: T
-------------------------------- "ConstructorMultiRef(ForceReadOnly)"
move, ro ⊢ [p0, p1]: &mut &mut T

ref, ro ⊢ [p0, p1]: T
------------------------------ "ConstructorMultiRef(ForceReadOnly)"
ref mut, ro ⊢ [p0, p1]: &mut T

move, ro ⊢ p: T
---------------- "Deref(EatOuter)"
move, m ⊢ &p: &T

move, ro ⊢ p: T
------------------------------------ "Deref(EatOuter)"
ref, m ⊢ &p: T, T is not a reference

move, m ⊢ p: T
------------------------ "Deref(EatOuter)"
move, m ⊢ &mut p: &mut T

move, m ⊢ p: T
-------------------------------------------- "Deref(EatOuter)"
ref mut, m ⊢ &mut p: T, T is not a reference

ref, ro ⊢ p: T
--------------- "Deref(EatInner)"
ref, m ⊢ &p: &T

ref, m ⊢ p: T
----------------------- "Deref(EatInner)"
ref, m ⊢ &mut p: &mut T

ref mut, rw ⊢ p: T
---------------------------- "Deref(EatInner)"
ref mut, rw ⊢ &mut p: &mut T

move, m ⊢ p: &T
----------------------- "Deref(EatInner, FallbackToOuter(EatOuter))"
ref mut, m ⊢ &mut p: &T

ref, ro ⊢ p: T
------------------- "Deref(EatInner, ForceReadOnly)"
ref mut, m ⊢ &p: &T

ref, ro ⊢ p: T
---------------------------- "Deref(EatInner, ForceReadOnly)"
ref mut, ro ⊢ &mut p: &mut T

move, ro ⊢ p: T
-------------------- "DerefMutWithShared(EatOuter)"
move, m ⊢ &p: &mut T

move, ro ⊢ p: T
---------------------------------------- "DerefMutWithShared(EatOuter)"
ref mut, m ⊢ &p: T, T is not a reference

ref, ro ⊢ p: T
------------------- "DerefMutWithShared(EatInner)"
ref, m ⊢ &p: &mut T

ref, ro ⊢ p: T
----------------------- "DerefMutWithShared(EatInner)"
ref mut, m ⊢ &p: &mut T

bm, m ⊢ ref x: T
----------------- "RefBindingResetBindingMode"
ref, m ⊢ ref x: T

bm, m ⊢ ref x: T
--------------------- "RefBindingResetBindingMode"
ref mut, m ⊢ ref x: T

bm, m ⊢ ref mut x: T
--------------------- "RefBindingResetBindingMode"
ref, m ⊢ ref mut x: T

bm, m ⊢ ref mut x: T
------------------------- "RefBindingResetBindingMode"
ref mut, m ⊢ ref mut x: T

ref, m ⊢ x: T
------------------ "BindingBorrow"
move, m ⊢ ref x: T

ref mut, m ⊢ x: T
---------------------- "BindingBorrow"
move, m ⊢ ref mut x: T


------------ "Binding"
bm, m ⊢ x: T


------------------ "Binding"
move, m ⊢ mut x: T
