tests/snapshots/trace_cli@3130517900821430636.snap
---
source: tests/trace_cli.rs
info: set downgrade_mut_inside_shared true
---
downgrade_mut_inside_shared: false -> true

The two rulesets are described by the following sets of rules, with differences highlighted.

 p0 @ e.0: T0,  p1 @ e.1: T1                                                      | p0 @ e.0: T0,  p1 @ e.1: T1
 --------------------------- "Constructor"                                        | --------------------------- "Constructor"
 [p0, p1] @ e: [T0, T1]                                                           | [p0, p1] @ e: [T0, T1]

 p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1                                            | p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
 ------------------------------------- "ConstructorRef"                           | ------------------------------------- "ConstructorRef"
 [p0, p1] @ e: &[T0, T1]                                                          | [p0, p1] @ e: &[T0, T1]

 p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1                            | p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
 ----------------------------------------------------- "ConstructorRef"           | ---------------------------------------- "ConstructorRef"
 [p0, p1] @ e: &mut [T0, T1], e read-only                                         | [p0, p1] @ e: &mut [T0, T1], e read-only

 p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1                            | p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1
 ----------------------------------------------------- "ConstructorRef"           | ----------------------------------------------------- "ConstructorRef"
 [p0, p1] @ e: &mut [T0, T1], e mutable                                           | [p0, p1] @ e: &mut [T0, T1], e mutable

 [p0, p1] @ *e: &T                                                                | [p0, p1] @ *e: &T
 ----------------- "ConstructorMultiRef"                                          | ----------------- "ConstructorMultiRef"
 [p0, p1] @ e: &&T                                                                | [p0, p1] @ e: &&T

 [p0, p1] @ &**e: &T                                                              | [p0, p1] @ &**e: &T
 --------------------- "ConstructorMultiRef"                                      | --------------------- "ConstructorMultiRef"
 [p0, p1] @ e: &&mut T                                                            | [p0, p1] @ e: &&mut T

 [p0, p1] @ *e: &T                                                                | [p0, p1] @ *e: &T
 --------------------- "ConstructorMultiRef"                                      | --------------------- "ConstructorMultiRef"
 [p0, p1] @ e: &mut &T                                                            | [p0, p1] @ e: &mut &T

 [p0, p1] @ &mut **e: &mut T                                                      | [p0, p1] @ &**e: &T
 -------------------------------------- "ConstructorMultiRef"                     | -------------------------------------- "ConstructorMultiRef"
 [p0, p1] @ e: &mut &mut T, e read-only                                           | [p0, p1] @ e: &mut &mut T, e read-only

 [p0, p1] @ &mut **e: &mut T                                                      | [p0, p1] @ &mut **e: &mut T
 ------------------------------------ "ConstructorMultiRef"                       | ------------------------------------ "ConstructorMultiRef"
 [p0, p1] @ e: &mut &mut T, e mutable                                             | [p0, p1] @ e: &mut &mut T, e mutable

 p @ *e: T                                                                        | p @ *e: T
 ---------- "Deref(EatOuter)"                                                     | ---------- "Deref(EatOuter)"
 &p @ e: &T                                                                       | &p @ e: &T

 p @ *e: T                                                                        | p @ *e: T
 ------------------ "Deref(EatOuter)"                                             | ------------------ "Deref(EatOuter)"
 &mut p @ e: &mut T                                                               | &mut p @ e: &mut T

 p @ *&*e: T                                                                      | p @ *&*e: T
 -------------- "DerefMutWithShared(EatOuter)"                                    | -------------- "DerefMutWithShared(EatOuter)"
 &p @ e: &mut T                                                                   | &p @ e: &mut T

 x @ &e: &T                                                                       | x @ &e: &T
 ---------------------------------- "BindingBorrow"                               | ---------------------------------- "BindingBorrow"
 ref x @ e: T, e is not a reference                                               | ref x @ e: T, e is not a reference

 x @ &mut e: &mut T                                                               | x @ &mut e: &mut T
 -------------------------------------- "BindingBorrow"                           | -------------------------------------- "BindingBorrow"
 ref mut x @ e: T, e is not a reference                                           | ref mut x @ e: T, e is not a reference

 let x: T = e                                                                     | let x: T = e
 ------------ "Binding"                                                           | ------------ "Binding"
 x @ e: T                                                                         | x @ e: T

 let mut x: T = e                                                                 | let mut x: T = e
 ---------------- "Binding"                                                       | ---------------- "Binding"
 mut x @ e: T                                                                     | mut x @ e: T
